branding/css/susemanager-theme.less
/* ... */
footer {
  border-top: 2px solid darken(@susemanager-green, 10%);
  background: @spacewalk-footer;
  padding: 6px 0 6px 12px;
  color: @spacewalk-footer-text;
  font-weight: normal;
  font-size: 0.9em;
  height: auto;
  min-height: auto;
  clear: both;
  position: absolute;
  bottom: -1px;
  width: 100%;
  .make-row(0);

  a {
    color: @spacewalk-footer-links;
    text-decoration: underline;
  }
  a:hover {
    color: @spacewalk-footer-hover;
  }
  /* override spacewalk rules */
  div:nth-child(1),
  div:nth-child(2) {
    float: none;
    width: 100%;
    margin: 0;
    min-height: auto;
    text-align: left!important;
    padding: 0;
  }

  div.wrapper {
    background: url('/img/susemanager/logo-footer-small.png') no-repeat right center;
    min-height: 28px;
    padding-right: 55px!important;
    > div {
      padding: 3px 0 2px 0;
    }
  }
}

.bottom-line {
  height: 8px;
  width: 100%;
  background: @susemanager-green;
  display: none;
}

/* titles */
h1, h2, h3, h4 {
  .Roboto-thin
}
h1 {
  font-size: 2em
}
h2 {
  font-size: 1.7em;
}
h3 {
  font-size: 1.4em;
}
h4 {
  font-size: 1.2em;
}
p {
  margin-bottom: 1em;
}

/* basic layout */
.row-0 {
  .make-row();
  &:first-child {
    padding-left:0;
  }
  &:last-child {
    padding-right: 0
  }
}
.spacewalk-header-container {
  .make-row(0);
  .spacewalk-logo {
    .make-xs-column(5);
    padding-left: 0;
  }
  .spacewalk-header-links {
    .make-xs-column(7);
    .text-right;
    padding-right: 0;
  }
}

/* override spacewalk rules */
section {
  transition: none!important;
  -webkit-transition: none!important;
}

.spacewalk-main-column-layout {
  .make-row(0);
  /* override the grid row margin */
  margin-right: 0;
  margin-left: 0;
   aside {
    .make-xs-column(2);
    background: @spacewalk-aside;
    border-right: 1px solid @spacewalk-aside-border;
    /* erasing the predefined paddings in the columns */
    padding: 1em 0 2em 0;
  }

  /* fixing margins in the 1st and last columns */
  section {
    .make-xs-column(10);
    padding-left:2em;
    padding-right: 2em;
    padding-top: 0;
    padding-bottom: 2em;
  }
}

#breadcrumb {
  margin-left: 40px;
  color: @spacewalk-gray;
  display: inline-block;
  span {
    vertical-align: bottom;
  }
  span.level, a {
    padding: 0 3px;
  }
  i {
    margin-right: 0;
  }
}

.navbar-right {
  float: right;
}

.navbar-collapse.in {
  display: block !important;
}
.navbar-collapse.collapse {
  display: none !important;
}
.navbar-collapse.collapse + section {
  width: 100%;
}

header, nav.navbar-pf {
  .navbar-toggle {
    display: block;
    position: absolute;
    top: 10px;
    left: 10px;
    margin: 0;
    border: 1px solid @spacewalk-gray-dark;
    padding: 2px 8px;
    border-radius: 2px;
    i {
      margin: 0;
    }
  }
  .navbar-toggle:hover {
    color: @susemanager-green;
  }
  .navbar-header {
    float: none;
    display: inline-block;
    vertical-align: top;
    margin-right: 5px;
  }
  .navbar-utility, .navbar-primary {
    .navbar-right;
    font-size: 1em;
    display: inline-block;
    position: relative;
    vertical-align: middle;
    a, .spacewalk-header-non-link {
      display: inline-block;
      padding: 4px 8px 4px 12px;
      border-radius: 2px;
    }
  }

  a.toggle-box:hover,
  a.toggle-box.open {
    color: @susemanager-green;
  }
  .box-wrapper {
    position: absolute;
    top: 100%;
    background-color: @spacewalk-blue;
    border-radius: 0px 2px 2px 2px;
    z-index: 1000;
    box-shadow: 0px 4px 4px 0px @spacewalk-gray;
    margin-top: 5px;
  }

  /* overwrite the padding the grid columns give */
  &#spacewalk-header {
    padding-right: 0;
    padding-left: 0;
  }
  /* Search header box */
  form#search-form {
    .form-group {
      padding: 10px;
      width: 200px;
    }
    input[type="search"] {
      padding: 0px 5px;
      -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
      box-sizing: border-box;
      display: block;
      width: 100%;
    }
    //style for the select to make it plain colour
    select.form-control {
      -webkit-appearance: button;
      -webkit-padding-end: 20px;
      background: url('../img/susemanager/dropdown-arrow.jpg') #fff no-repeat right center;
      cursor: pointer;
      display: inline-block;
      -moz-appearance: none;
      text-indent: 0.01px;
      text-overflow: '';
      line-height: normal;
      padding: 2px 28px 2px 2px;
      display: block;
      width: 100%;
      margin: 5px 0;
    }
  }

  /* System Set Manager header box */
  .ssm-box {
    border: 1px solid @spacewalk-gray-dark;
    #header_selcount {
      .badge {
        border-radius: 8px;
        background: @spacewalk-gray-light;
        display: inline-block;
        padding: 2px 6px;
        text-align: center;
        color: darken(@spacewalk-gray-dark, 20%);
        vertical-align: middle;
        margin-right: 5px;
      }
    }
    a#manage-ssm:hover {
      text-decoration: none;
      color: @susemanager-green;
    }
    a {
      display: inline-block;
      border-radius: 0;
      padding: 3px 5px;
    }
    a#clear-ssm {
      margin-left: -4px;
      border-left: 1px dashed @spacewalk-gray-dark;
      color: @spacewalk-gray-light;
      i {
        margin: 0;
      }
    }
    a#clear-ssm:hover {
      background-color: @spacewalk-red;
      color: @spacewalk-gray-light;
    }
  }

  /* Header Logo bar */
  .navbar-brand {
    float: none;
    padding: 0;
    height: auto;
    line-height: 1.2em;
    font-size: 1.6em;
    display: inline-block;
    vertical-align: middle;
    color: @spacewalk-gray-light;
    > i {
      display: none;
    }
    > span > i {
      font-size: 0.4em;
      margin-right: 0.8em;
    }
  }
  .navbar-brand:hover {
    color: @spacewalk-gray-light;
  }
}
/* ... */

